Closed Bug 1725089 Opened 5 years ago Closed 5 years ago

Perma [tier2] wasi bustage 0:07.17 /builds/worker/workspace/obj-spider/dist/include/mozilla/BaseProfilerUtils.h:27:32: error: use of undeclared identifier 'getpid'

Categories

(Core :: Gecko Profiler, defect, P3)

defect

Tracking

()

RESOLVED FIXED
93 Branch
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- unaffected
firefox91 --- unaffected
firefox92 --- unaffected
firefox93 --- fixed

People

(Reporter: intermittent-bug-filer, Assigned: mozbugz)

References

(Blocks 1 open bug, Regression)

Details

(Keywords: intermittent-failure, regression)

Attachments

(1 file)

Filed by: abutkovits [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer?job_id=348049198&repo=autoland
Full log: https://firefox-ci-tc.services.mozilla.com/api/queue/v1/task/O-_4KyveTUy927o7tnXxcQ/runs/0/artifacts/public/logs/live_backing.log


[task 2021-08-11T03:45:40.157Z]     export FOUND_MOZCONFIG
[task 2021-08-11T03:45:40.157Z]  0:05.84 /usr/bin/make -f client.mk -s
[task 2021-08-11T03:45:40.278Z]  0:05.96 Elapsed: 0.00s; From dist/private: Kept 0 existing; Added/updated 0; Removed 0 files and 0 directories.
[task 2021-08-11T03:45:40.279Z]  0:05.96 Elapsed: 0.00s; From dist/public: Kept 0 existing; Added/updated 0; Removed 0 files and 0 directories.
[task 2021-08-11T03:45:40.281Z]  0:05.97 Elapsed: 0.00s; From dist/bin: Kept 0 existing; Added/updated 2; Removed 0 files and 0 directories.
[task 2021-08-11T03:45:40.285Z]  0:05.97 Elapsed: 0.01s; From dist/include: Kept 3 existing; Added/updated 294; Removed 0 files and 0 directories.
[task 2021-08-11T03:45:40.323Z]  0:06.01 Elapsed: 0.04s; From _tests: Kept 3 existing; Added/updated 487; Removed 0 files and 0 directories.
[task 2021-08-11T03:45:40.432Z]  0:06.12 config
[task 2021-08-11T03:45:40.534Z]  0:06.22 ./js-confdefs.h.stub
[task 2021-08-11T03:45:40.539Z]  0:06.22 ./js-config.h.stub
[task 2021-08-11T03:45:40.544Z]  0:06.23 ./LOpcodesGenerated.h.stub
[task 2021-08-11T03:45:40.570Z]  0:06.25 ./ReservedWordsGenerated.h.stub
[task 2021-08-11T03:45:40.570Z]  0:06.25 ./StatsPhasesGenerated.h.stub
[task 2021-08-11T03:45:40.573Z]  0:06.26 ./ProfilingCategoryList.h.stub
[task 2021-08-11T03:45:40.577Z]  0:06.26 config/nsinstall_real
[task 2021-08-11T03:45:40.703Z]  0:06.39 ./selfhosted.out.h.stub
[task 2021-08-11T03:45:40.703Z]  0:06.39 /builds/worker/fetches/clang/bin/clang++ --sysroot /builds/worker/fetches/wasi-sysroot/share/wasi-sysroot/ -std=gnu++17 --target=wasm32-wasi -E -o self-hosting-preprocessed.pp -Qunused-arguments -Werror -DCROSS_COMPILE=1 -DXP_UNIX=1 -DMOZ_BUILD_APP=js -DNIGHTLY_BUILD=1 -DEARLY_BETA_OR_EARLIER=1 -DMOZILLA_VERSION="93.0a1" -DMOZILLA_VERSION_U=93.0a1 -DMOZILLA_UAVERSION="93.0" -DMOZ_UPDATE_CHANNEL=default -DHAVE_VISIBILITY_HIDDEN_ATTRIBUTE=1 -DHAVE_VISIBILITY_ATTRIBUTE=1 -DHAVE_STDINT_H=1 -DHAVE_INTTYPES_H=1 -DSTDC_HEADERS=1 -DHAVE_MALLOC_H=1 -DHAVE_ALLOCA_H=1 -DHAVE_GETOPT_H=1 -DHAVE_UNISTD_H=1 -DHAVE_NL_TYPES_H=1 -DHAVE_SYS_TYPES_H=1 -DHAVE_NETINET_IN_H=1 -DHAVE_BYTESWAP_H=1 -DMOZ_DLL_PREFIX="lib" -DMOZ_DLL_SUFFIX=".so" -DJS_WITHOUT_NSPR=1 -DJS_STANDALONE=1 -DJS_NUNBOX32=1 -DSTATIC_EXPORTABLE_JS_API=1 -DMOZ_STATIC_JS=1 -DJS_CODEGEN_NONE=1 -DMOZ_PROFILING=1 -DJS_TRACE_LOGGING=1 -DMOZ_AARCH64_JSCVT=0 -DENABLE_SPIDERMONKEY_TELEMETRY=1 -DENABLE_WASM_FUNCTION_REFERENCES=1 -DENABLE_WASM_GC=1 -DWASM_PRIVATE_REFTYPES=1 -DENABLE_WASM_EXTENDED_CONST=1 -DENABLE_WASM_MOZ_INTGEMM=1 -DJS_DEFAULT_JITREPORT_GRANULARITY=3 -DU_STATIC_IMPLEMENTATION=1 -DENABLE_WASM_TYPE_REFLECTIONS=1 -DENABLE_WASM_EXCEPTIONS=1 -DMOZJS_MAJOR_VERSION=93 -DMOZJS_MINOR_VERSION=0 -DHAVE_SSIZE_T=1 -DHAVE_DIRENT_H=1 -DHAVE_GETC_UNLOCKED=1 -DHAVE_GMTIME_R=1 -DHAVE_LOCALTIME_R=1 -DHAVE_CLOCK_MONOTONIC=1 -DHAVE_LIBM=1 -DHAVE_LANGINFO_CODESET=1 -DVA_COPY=va_copy -DHAVE_VA_COPY=1 -DHAVE_THREAD_TLS_KEYWORD=1 -DHAVE_LOCALECONV=1 -DHAVE___CXA_DEMANGLE=1 -DHAVE_TM_ZONE_TM_GMTOFF=1 -DHAVE_POSIX_FADVISE=1 -DHAVE_POSIX_FALLOCATE=1 -DMALLOC_H=<malloc.h> -DHAVE_STRNDUP=1 -DHAVE_POSIX_MEMALIGN=1 -DHAVE_MALLOC_USABLE_SIZE=1 -DMALLOC_USABLE_SIZE_CONST_PTR= -DNO_NSPR_10_SUPPORT=1 -DNDEBUG=1 -DTRIMMED=1 self-hosting-cpp-input.cpp
[task 2021-08-11T03:45:40.741Z]  0:06.42 ./MIROpsGenerated.h.stub
[task 2021-08-11T03:45:40.742Z]  0:06.43 config/system-header.sentinel.stub
[task 2021-08-11T03:45:40.776Z]  0:06.46 ./CacheIROpsGenerated.h.stub
[task 2021-08-11T03:45:40.801Z]  0:06.48 js/src/frontend
[task 2021-08-11T03:45:40.801Z]  0:06.48 js/src/wasm
[task 2021-08-11T03:45:40.803Z]  0:06.49 js/src/jit
[task 2021-08-11T03:45:40.803Z]  0:06.49 js/src
[task 2021-08-11T03:45:40.803Z]  0:06.49 modules/fdlibm/src
[task 2021-08-11T03:45:40.803Z]  0:06.49 modules/zlib/src
[task 2021-08-11T03:45:40.805Z]  0:06.49 js/src/debugger
[task 2021-08-11T03:45:40.806Z]  0:06.49 memory/build
[task 2021-08-11T03:45:40.806Z]  0:06.49 js/src/irregexp
[task 2021-08-11T03:45:40.814Z]  0:06.50 js/src/shell
[task 2021-08-11T03:45:40.815Z]  0:06.50 memory/mozalloc
[task 2021-08-11T03:45:40.816Z]  0:06.50 mfbt
[task 2021-08-11T03:45:40.952Z]  0:06.64 js/src/gc/StatsPhasesGenerated.inc.stub
[task 2021-08-11T03:45:41.087Z]  0:06.77 mozglue/baseprofiler
[task 2021-08-11T03:45:41.489Z]  0:07.17 In file included from Unified_cpp_mozglue_baseprofiler0.cpp:2:
[task 2021-08-11T03:45:41.490Z]  0:07.17 In file included from /builds/worker/checkouts/gecko/mozglue/baseprofiler/core/ProfilerUtils.cpp:12:
[task 2021-08-11T03:45:41.490Z]  0:07.17 /builds/worker/workspace/obj-spider/dist/include/mozilla/BaseProfilerUtils.h:27:32: error: use of undeclared identifier 'getpid'
[task 2021-08-11T03:45:41.490Z]  0:07.17 using ProcessIdType = decltype(getpid());
[task 2021-08-11T03:45:41.490Z]  0:07.17                                ^
[task 2021-08-11T03:45:41.490Z]  0:07.17 In file included from Unified_cpp_mozglue_baseprofiler0.cpp:2:
[task 2021-08-11T03:45:41.490Z]  0:07.17 In file included from /builds/worker/checkouts/gecko/mozglue/baseprofiler/core/ProfilerUtils.cpp:12:
[task 2021-08-11T03:45:41.490Z]  0:07.17 In file included from /builds/worker/workspace/obj-spider/dist/include/mozilla/BaseProfilerUtils.h:64:
[task 2021-08-11T03:45:41.490Z]  0:07.17 In file included from /builds/worker/workspace/obj-spider/dist/system_wrappers/thread:3:
[task 2021-08-11T03:45:41.490Z]  0:07.17 /builds/worker/fetches/wasi-sysroot/share/wasi-sysroot//include/c++/v1/thread:109:2: error: <thread> is not supported on this single threaded system
[task 2021-08-11T03:45:41.490Z]  0:07.17 #error <thread> is not supported on this single threaded system
[task 2021-08-11T03:45:41.490Z]  0:07.17  ^
[task 2021-08-11T03:45:41.490Z]  0:07.17 In file included from Unified_cpp_mozglue_baseprofiler0.cpp:2:
[task 2021-08-11T03:45:41.490Z]  0:07.17 In file included from /builds/worker/checkouts/gecko/mozglue/baseprofiler/core/ProfilerUtils.cpp:12:
[task 2021-08-11T03:45:41.490Z]  0:07.17 /builds/worker/workspace/obj-spider/dist/include/mozilla/BaseProfilerUtils.h:67:27: error: no member named 'thread' in namespace 'std'
[task 2021-08-11T03:45:41.490Z]  0:07.17 using ThreadIdType = std::thread::id;
[task 2021-08-11T03:45:41.490Z]  0:07.17                      ~~~~~^
[task 2021-08-11T03:45:41.490Z]  0:07.17 /builds/worker/workspace/obj-spider/dist/include/mozilla/BaseProfilerUtils.h:82:30: error: no type named 'ProcessIdType' in namespace 'mozilla::baseprofiler::detail'
[task 2021-08-11T03:45:41.490Z]  0:07.17   using NativeType = detail::ProcessIdType;
[task 2021-08-11T03:45:41.490Z]  0:07.17                      ~~~~~~~~^
[task 2021-08-11T03:45:41.490Z]  0:07.17 /builds/worker/workspace/obj-spider/dist/include/mozilla/BaseProfilerUtils.h:85:34: error: use of undeclared identifier 'NativeType'
[task 2021-08-11T03:45:41.490Z]  0:07.17       std::conditional_t<(sizeof(NativeType) <= 4), uint32_t, uint64_t>;
[task 2021-08-11T03:45:41.490Z]  0:07.17                                  ^
[task 2021-08-11T03:45:41.490Z]  0:07.17 /builds/worker/workspace/obj-spider/dist/include/mozilla/BaseProfilerUtils.h:86:24: error: use of undeclared identifier 'NativeType'
[task 2021-08-11T03:45:41.490Z]  0:07.17   static_assert(sizeof(NativeType) <= sizeof(NumberType));
[task 2021-08-11T03:45:41.490Z]  0:07.17                        ^
[task 2021-08-11T03:45:41.490Z]  0:07.17 /builds/worker/workspace/obj-spider/dist/include/mozilla/BaseProfilerUtils.h:86:46: error: use of undeclared identifier 'NumberType'
[task 2021-08-11T03:45:41.490Z]  0:07.17   static_assert(sizeof(NativeType) <= sizeof(NumberType));
[task 2021-08-11T03:45:41.490Z]  0:07.17                                              ^
[task 2021-08-11T03:45:41.490Z]  0:07.17 /builds/worker/workspace/obj-spider/dist/include/mozilla/BaseProfilerUtils.h:97:13: error: unknown type name 'NativeType'
[task 2021-08-11T03:45:41.490Z]  0:07.17       const NativeType& aNativeProcessId) {
[task 2021-08-11T03:45:41.490Z]  0:07.17             ^
[task 2021-08-11T03:45:41.490Z]  0:07.17 /builds/worker/workspace/obj-spider/dist/include/mozilla/BaseProfilerUtils.h:107:27: error: unknown type name 'NumberType'
[task 2021-08-11T03:45:41.490Z]  0:07.17   [[nodiscard]] constexpr NumberType ToNumber() const { return mProcessId; }
[task 2021-08-11T03:45:41.490Z]  0:07.17                           ^
[task 2021-08-11T03:45:41.490Z]  0:07.17 /builds/worker/workspace/obj-spider/dist/include/mozilla/BaseProfilerUtils.h:111:13: error: unknown type name 'NumberType'
[task 2021-08-11T03:45:41.490Z]  0:07.17       const NumberType& aProcessId) {
[task 2021-08-11T03:45:41.490Z]  0:07.17             ^
[task 2021-08-11T03:45:41.490Z]  0:07.17 /builds/worker/workspace/obj-spider/dist/include/mozilla/BaseProfilerUtils.h:127:20: error: unknown type name 'NumberType'
[task 2021-08-11T03:45:41.490Z]  0:07.17   static constexpr NumberType scUnspecified = 0;
[task 2021-08-11T03:45:41.490Z]  0:07.17                    ^
[task 2021-08-11T03:45:41.490Z]  0:07.17 /builds/worker/workspace/obj-spider/dist/include/mozilla/BaseProfilerUtils.h:128:3: error: unknown type name 'NumberType'
[task 2021-08-11T03:45:41.490Z]  0:07.17   NumberType mProcessId = scUnspecified;
[task 2021-08-11T03:45:41.490Z]  0:07.17   ^
[task 2021-08-11T03:45:41.490Z]  0:07.17 /builds/worker/workspace/obj-spider/dist/include/mozilla/BaseProfilerUtils.h:91:32: error: no return statement in constexpr function
[task 2021-08-11T03:45:41.490Z]  0:07.17   [[nodiscard]] constexpr bool IsSpecified() const {
[task 2021-08-11T03:45:41.490Z]  0:07.17                                ^
[task 2021-08-11T03:45:41.490Z]  0:07.17 /builds/worker/workspace/obj-spider/dist/include/mozilla/BaseProfilerUtils.h:100:48: error: use of undeclared identifier 'NativeType'
[task 2021-08-11T03:45:41.490Z]  0:07.17     static_assert(std::is_trivially_copyable_v<NativeType>);
[task 2021-08-11T03:45:41.490Z]  0:07.17                                                ^
[task 2021-08-11T03:45:41.490Z]  0:07.17 /builds/worker/workspace/obj-spider/dist/include/mozilla/BaseProfilerUtils.h:101:54: error: use of undeclared identifier 'NativeType'
[task 2021-08-11T03:45:41.490Z]  0:07.17     memcpy(&id.mProcessId, &aNativeProcessId, sizeof(NativeType));
[task 2021-08-11T03:45:41.490Z]  0:07.17                                                      ^
[task 2021-08-11T03:45:41.490Z]  0:07.17 /builds/worker/workspace/obj-spider/dist/include/mozilla/BaseProfilerUtils.h:117:32: error: no return statement in constexpr function
[task 2021-08-11T03:45:41.490Z]  0:07.17   [[nodiscard]] constexpr bool operator==(
[task 2021-08-11T03:45:41.490Z]  0:07.17                                ^
[task 2021-08-11T03:45:41.490Z]  0:07.17 /builds/worker/workspace/obj-spider/dist/include/mozilla/BaseProfilerUtils.h:121:32: error: no return statement in constexpr function
[task 2021-08-11T03:45:41.490Z]  0:07.17   [[nodiscard]] constexpr bool operator!=(
[task 2021-08-11T03:45:41.490Z]  0:07.17                                ^
[task 2021-08-11T03:45:41.490Z]  0:07.17 /builds/worker/workspace/obj-spider/dist/include/mozilla/BaseProfilerUtils.h:141:30: error: no type named 'ThreadIdType' in namespace 'mozilla::baseprofiler::detail'
[task 2021-08-11T03:45:41.490Z]  0:07.17   using NativeType = detail::ThreadIdType;
[task 2021-08-11T03:45:41.490Z]  0:07.17                      ~~~~~~~~^
[task 2021-08-11T03:45:41.490Z]  0:07.17 /builds/worker/workspace/obj-spider/dist/include/mozilla/BaseProfilerUtils.h:144:34: error: use of undeclared identifier 'NativeType'
[task 2021-08-11T03:45:41.490Z]  0:07.17       std::conditional_t<(sizeof(NativeType) <= 4), uint32_t, uint64_t>;
[task 2021-08-11T03:45:41.490Z]  0:07.17                                  ^
[task 2021-08-11T03:45:41.490Z]  0:07.17 fatal error: too many errors emitted, stopping now [-ferror-limit=]
[task 2021-08-11T03:45:41.490Z]  0:07.17 20 errors generated.
[task 2021-08-11T03:45:41.490Z]  0:07.17 make[4]: *** [/builds/worker/checkouts/gecko/config/rules.mk:693: Unified_cpp_mozglue_baseprofiler0.o] Error 1
[task 2021-08-11T03:45:41.490Z]  0:07.17 make[3]: *** [/builds/worker/checkouts/gecko/config/recurse.mk:72: mozglue/baseprofiler/target-objects] Error 2
[task 2021-08-11T03:45:41.490Z]  0:07.17 make[3]: *** Waiting for unfinished jobs....
Flags: needinfo?(gsquelart)
Assignee: nobody → gsquelart
Component: General → Gecko Profiler
Flags: needinfo?(gsquelart)
Keywords: regression
Priority: P5 → P3
Product: Firefox Build System → Core
Regressed by: 1721569
Has Regression Range: --- → yes

Set release status flags based on info from the regressing bug 1721569

Pushed by gsquelart@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/d77e5c185bd7 Add support for WASI in ProfilerUtils - r=jandem
Status: NEW → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: