Bug 1725089 - Add support for WASI in ProfilerUtils - r=jandem

Differential Revision: https://phabricator.services.mozilla.com/D122313